@@ -1,6 +1,6 @@
 #!/bin/sh
 
-#	Copyright (C) 2002, 2006 Free Software Foundation
+#	Copyright (C) 2002, 2006, 2008 Free Software Foundation
 #
 #   This file is part of GUILE.
 #
